trunk/Archive2/18/5ac16a4f50580b/output
main.cpp: In function ‘int main(int, char**)’:
main.cpp:1:53: error: use of deleted function ‘void Obj::deleted()’
 template<typename T, typename = decltype (T::deleted, int { })>
                                                     ^
main.cpp:8:8: error: declared here
   void deleted () = delete;
        ^
main.cpp:1:53: error: use of deleted function ‘void Obj::deleted()’
 template<typename T, typename = decltype (T::deleted, int { })>
                                                     ^
main.cpp:8:8: error: declared here
   void deleted () = delete;
        ^
